<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fudosan.ui.sign.SignFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fudosan_logo_en" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/review_your_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TableLayout
            android:id="@+id/tablePersonData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView9">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPersonNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textViewPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_example" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPersonDateOfBirthLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/dob" />

                <TextView
                    android:id="@+id/textViewPersonDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob_example" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPersonAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/textViewPersonAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_example" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPersonPhoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/phone_number" />

                <TextView
                    android:id="@+id/textViewPersonPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_example" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPersonBankAccountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/bank_account" />

                <TextView
                    android:id="@+id/textViewPersonBankAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_account_example" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPersonEmployerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/employer" />

                <TextView
                    android:id="@+id/textViewPersonEmployer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employer_example" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageContract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/contract_en"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tablePersonData" />

        <Button
            android:id="@+id/button_sign"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/sign"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageContract" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>