<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fudosan_logo_en" />

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageLogo">

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/personal_data_allow"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/personal_data_obtained"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textInfoFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/full_name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textInfoBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textInfoAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@android:string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoContainer" />

    <Button
        android:id="@+id/buttonOk"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@android:string/ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoContainer" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
