<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fudosan_logo_en" />

    <ImageView
        android:id="@+id/imageSuccess"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_check_green_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_data_from_lra_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSuccess" />

    <TableLayout
        android:id="@+id/tablePersonData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSuccess">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNameRomajiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="6dp"
                android:text="@string/label_name_romaji" />

            <TextView
                android:id="@+id/textNameRomaji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Aoki Takada" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNameKatakanaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="6dp"
                android:text="@string/label_name_katakana" />

            <TextView
                android:id="@+id/textNameKatakana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="in katakana" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNameKanjiiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="6dp"
                android:text="@string/label_name_kanji" />

            <TextView
                android:id="@+id/textNameKanjii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="in kanji" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewBirthDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="6dp"
                android:text="@string/label_birth_date" />

            <TextView
                android:id="@+id/textViewBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="03.07.1980" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="6dp"
                android:text="@string/label_address" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1-1 Shinchiba Chuoku, Chiba-shi, Chiba" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
